<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    xmlns:android="http://schemas.android.com/apk/res/android">

<LinearLayout

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:padding="@dimen/_16sdp"
    tools:context=".Login">


    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:scaleType="centerCrop"
        android:src="@drawable/nosghilogo"

        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="تسجيل الدخول"
        android:textColor="#FFFFFF"
        android:textSize="@dimen/_32sdp" />

    <EditText
        android:id="@+id/etName"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:paddingTop="5dp"
        android:textColor="#000000"
        android:textColorHint="#938f8f"
        android:textSize="19dp" />

    <EditText
        android:id="@+id/etEmailAddress"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password2"
        android:inputType="textPassword"
        android:paddingTop="5dp"
        android:textColor="#000000"
        android:textColorHint="#938f8f"
        android:textSize="19dp" />


    <Button
        android:id="@+id/bRegister"
        style="@style/Button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/register"
        android:textColor="#ffffff"
        android:textStyle="bold" />


    <androidx.appcompat.widget.AppCompatCheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remeber_me"
        android:layout_marginTop="@dimen/_16sdp"
        android:textColor="#fff"
        android:textColorHint="#fff"
        android:shadowColor="#fff"
        android:outlineSpotShadowColor="#fff"
        android:textColorLink="#fff"
        android:outlineAmbientShadowColor="#fff"
        android:textColorHighlight="#fff"
        android:layout_gravity="right">
    </androidx.appcompat.widget.AppCompatCheckBox>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#fff"
        android:text="@string/nothavingacc"
        android:id="@+id/txRegister"
        android:textSize="@dimen/_15sdp"
        android:layout_gravity="left"/>


</LinearLayout>
</ScrollView>